feat: add durability notification feature

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,6 @@ archives_base_name=essentialsqolmod
 fabric_version=0.102.0+1.21
 luckperms_api_version=5.4
 fabric_permissions_api_version=0.3.1
+yacl_api_version=3.5.0+1.21-fabric
+mod_menu_version=11.0.2
+cloth_config_api_version=15.0.130
