--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ plugins {
 
 version = project.mod_version
 group = project.maven_group
+minecraft_version = project.minecraft_version
+loader_version = project.loader_version
 
 base {
     archivesName = project.archives_base_name
@@ -18,6 +20,15 @@ repositories {
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
     mavenCentral()
+    maven {
+        name 'Xander Maven'
+        url 'https://maven.isxander.dev/releases'
+    }
+    maven {
+        name = "Terraformers"
+        url = "https://maven.terraformersmc.com/"
+    }
+    maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
@@ -35,18 +46,36 @@ dependencies {
 
     // fabric-permissions-api
     include(modImplementation("me.lucko:fabric-permissions-api:${project.fabric_permissions_api_version}"))
+
+    // mod menu api
+    modImplementation("com.terraformersmc:modmenu:${project.mod_menu_version}")
+
+    // cloth config api
+    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_api_version}") {
+        exclude (group: "net.fabricmc.fabric-api")
+    }
+
+    // yacl api
+    modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_api_version}"
 }
 
 processResources {
     inputs.property "version", project.version
     inputs.property "minecraft_version", project.minecraft_version
     inputs.property "loader_version", project.loader_version
+    inputs.property "fabric_permissions_api_version", project.fabric_permissions_api_version
+    inputs.property "cloth_config_api_version", project.cloth_config_api_version
+    inputs.property "yacl_api_version", project.yacl_api_version
+
     filteringCharset "UTF-8"
 
     filesMatching("fabric.mod.json") {
         expand "version": project.version,
                 "minecraft_version": project.minecraft_version,
-                "loader_version": project.loader_version
+                "loader_version": project.loader_version,
+                "fabric_permissions_api_version": project.fabric_permissions_api_version,
+                "cloth_config_api_version": project.cloth_config_api_version,
+                "yacl_api_version": project.yacl_api_version
     }
 }
 
